NOGH: Sample migration to fluid-testem.

--- a/tests/html/raf-clock-tests.html
+++ b/tests/html/raf-clock-tests.html
@@ -16,8 +16,8 @@
         <script type="text/javascript" src="../../node_modules/infusion/tests/lib/qunit/js/qunit.js"></script>
         <script type="text/javascript" src="../../node_modules/infusion/tests/test-core/jqUnit/js/jqUnit.js"></script>
 
-        <script type="text/javascript" src="../../src/js/clock.js"></script>
-        <script type="text/javascript" src="../../src/js/raf-clock.js"></script>
+        <script type="text/javascript" src="/src/js/clock.js"></script>
+        <script type="text/javascript" src="/src/js/raf-clock.js"></script>
 
         <script type="text/javascript" src="../js/utils/clock-test-utilities.js"></script>
         <script type="text/javascript" src="../js/utils/clock-tester.js"></script>
@@ -25,6 +25,7 @@
 
         <script type="text/javascript" src="../js/raf-clock-tests.js"></script>
 
+        <script type="text/javascript" src="/coverage/client/coverageSender.js"></script>
     </head>
 
     <body id="body">
