--- a/tests/html/realtime-clock-tests.html
+++ b/tests/html/realtime-clock-tests.html
@@ -16,7 +16,7 @@
         <script type="text/javascript" src="../../node_modules/infusion/tests/lib/qunit/js/qunit.js"></script>
         <script type="text/javascript" src="../../node_modules/infusion/tests/test-core/jqUnit/js/jqUnit.js"></script>
 
-        <script type="text/javascript" src="../../src/js/clock.js"></script>
+        <script type="text/javascript" src="/src/js/clock.js"></script>
 
         <script type="text/javascript" src="../js/utils/clock-test-utilities.js"></script>
         <script type="text/javascript" src="../js/utils/clock-tester.js"></script>
@@ -24,6 +24,7 @@
 
         <script type="text/javascript" src="../js/realtime-clock-tests.js"></script>
 
+        <script type="text/javascript" src="/coverage/client/coverageSender.js"></script>
     </head>
 
     <body id="body">
