--- a/tests/html/worker-scheduler-tests.html
+++ b/tests/html/worker-scheduler-tests.html
@@ -16,14 +16,15 @@
         <script type="text/javascript" src="../../node_modules/infusion/tests/lib/qunit/js/qunit.js"></script>
         <script type="text/javascript" src="../../node_modules/infusion/tests/test-core/jqUnit/js/jqUnit.js"></script>
 
-        <script type="text/javascript" src="../../src/js/clock.js"></script>
-        <script type="text/javascript" src="../../src/js/priority-queue.js"></script>
-        <script type="text/javascript" src="../../src/js/scheduler.js"></script>
-        <script type="text/javascript" src="../../src/js/postmessage-utils.js"></script>
-        <script type="text/javascript" src="../../src/js/worker-scheduler.js"></script>
+        <script type="text/javascript" src="/src/js/clock.js"></script>
+        <script type="text/javascript" src="/src/js/priority-queue.js"></script>
+        <script type="text/javascript" src="/src/js/scheduler.js"></script>
+        <script type="text/javascript" src="/src/js/postmessage-utils.js"></script>
+        <script type="text/javascript" src="/src/js/worker-scheduler.js"></script>
 
         <script type="text/javascript" src="../js/worker-scheduler-tests.js"></script>
 
+        <script type="text/javascript" src="/coverage/client/coverageSender.js"></script>
     </head>
 
     <body id="body">
