--- a/tests/html/audiocontext-clock-tests.html
+++ b/tests/html/audiocontext-clock-tests.html
@@ -16,8 +16,8 @@
         <script type="text/javascript" src="../../node_modules/infusion/tests/lib/qunit/js/qunit.js"></script>
         <script type="text/javascript" src="../../node_modules/infusion/tests/test-core/jqUnit/js/jqUnit.js"></script>
 
-        <script type="text/javascript" src="../../src/js/clock.js"></script>
-        <script type="text/javascript" src="../../src/js/audiocontext-clock.js"></script>
+        <script type="text/javascript" src="/src/js/clock.js"></script>
+        <script type="text/javascript" src="/src/js/audiocontext-clock.js"></script>
 
         <script type="text/javascript" src="../js/utils/clock-tester.js"></script>
         <script type="text/javascript" src="../js/utils/realtime-tester.js"></script>
@@ -26,6 +26,8 @@
 
         <script type="text/javascript" src="../js/audiocontext-clock-tests.js"></script>
         <script src="/testem.js"></script>
+
+        <script type="text/javascript" src="/coverage/client/coverageSender.js"></script>
     </head>
 
     <body id="body">
