--- a/tests/html/priority-queue-tests.html
+++ b/tests/html/priority-queue-tests.html
@@ -16,10 +16,11 @@
         <script type="text/javascript" src="../../node_modules/infusion/tests/lib/qunit/js/qunit.js"></script>
         <script type="text/javascript" src="../../node_modules/infusion/tests/test-core/jqUnit/js/jqUnit.js"></script>
 
-        <script type="text/javascript" src="../../src/js/priority-queue.js"></script>
+        <script type="text/javascript" src="/src/js/priority-queue.js"></script>
 
         <script type="text/javascript" src="../js/priority-queue-tests.js"></script>
 
+        <script type="text/javascript" src="/coverage/client/coverageSender.js"></script>
     </head>
 
     <body id="body">
