--- a/tests/html/worker-setinterval-clock-tests.html
+++ b/tests/html/worker-setinterval-clock-tests.html
@@ -16,9 +16,9 @@
         <script type="text/javascript" src="../../node_modules/infusion/tests/lib/qunit/js/qunit.js"></script>
         <script type="text/javascript" src="../../node_modules/infusion/tests/test-core/jqUnit/js/jqUnit.js"></script>
 
-        <script type="text/javascript" src="../../src/js/clock.js"></script>
-        <script type="text/javascript" src="../../src/js/postmessage-utils.js"></script>
-        <script type="text/javascript" src="../../src/js/worker-setinterval-clock.js"></script>
+        <script type="text/javascript" src="/src/js/clock.js"></script>
+        <script type="text/javascript" src="/src/js/postmessage-utils.js"></script>
+        <script type="text/javascript" src="/src/js/worker-setinterval-clock.js"></script>
 
         <script type="text/javascript" src="../js/utils/clock-test-utilities.js"></script>
         <script type="text/javascript" src="../js/utils/clock-tester.js"></script>
@@ -26,6 +26,7 @@
 
         <script type="text/javascript" src="../js/worker-setinterval-clock-tests.js"></script>
 
+        <script type="text/javascript" src="/coverage/client/coverageSender.js"></script>
     </head>
 
     <body id="body">
